--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -1,4 +1,4 @@
-<app-header id="top"></app-header>
+<app-header id="top" [message]="cartvalue" [wishlist]="wishlist"></app-header>
 <div class="container containerStyle">
   <div class="row">
     <div class="col-md-2">
@@ -57,12 +57,12 @@
         Quantity
       </b>
       <br/>
-      <input type="number" step="1" min="1" value="1" style="padding-left: 15px; margin-top: 3px;">
+      <input type="number" step="1" min="1" value="1" style="padding-left: 15px; margin-top: 3px;" [(ngModel)]="cartvalue">
       <span>
-        <button type="submit" class="btn btn-dark btn-lg " style="font-family: ubuntu, sans-serif; font-size: 15px;">
+        <button type="submit" class="btn btn-dark btn-lg " style="font-family: ubuntu, sans-serif; font-size: 15px;" (click)="cartList()">
           <i class="fa fa-shopping-cart" style="color: white;"></i> ADD TO CART
         </button>
-        <button type="button" class="btn btn-default btn-lg" style="padding-top: 2px; padding-left: 12px; padding-right: 10px; margin-left: 10px">
+        <button type="button" class="btn btn-default btn-lg" style="padding-top: 2px; padding-left: 12px; padding-right: 10px; margin-left: 10px" (click)="wishList()">
           <i class="fa fa-heart-o"></i>
         </button>
         <button type="button" class="btn btn-default btn-lg" style="padding-top: 2px; padding-left: 12px; padding-right: 10px; margin-left: 10px">
