--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,3 @@
-
 <div class="page-header" style="background-color: #252525; height: 48px">
   <div class="container">
     <div class="row">
@@ -29,14 +28,14 @@
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px ;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-              USD
+              CART ({{message}})
             </span>
             <span class="caret">
             </span>
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px; font-family: ubuntu, sans-serif">
-              Wishlist (0)
+              Wishlist ({{wishlist}})
             </span>
             <span class="caret">
             </span>
@@ -56,7 +55,7 @@
       <a class="navbar-brand " style="font-family: ubuntu, sans-serif; font-weight: 25">
         UP
         <span style="color:aqua; font-size: 25px">.</span>STORE</a>
-      <a class="navbar-brand " style="font-family: ubuntu, sans-serif; font-weight: 25; margin-right: 510px"></a>
+      <!-- <a class="navbar-brand " style="font-family: ubuntu, sans-serif; font-weight: 25; margin-right: 510px"></a>
       <a class="navbar-brand navs">
         Home
       </a>
@@ -74,7 +73,7 @@
       </a>
       <a class="navbar-brand navs">
         Shortcode
-      </a>
+      </a> -->
     </div>
   </div>
 </nav>
