--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,14 +28,14 @@
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px ;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-              CART ({{message}})
+              CART ({{cartList}})
             </span>
             <span class="caret">
             </span>
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px; font-family: ubuntu, sans-serif">
-              Wishlist ({{wishlist}})
+              Wishlist ({{wishlistData}})
             </span>
             <span class="caret">
             </span>
