--- a/src/app/shopdetailssidebarbutton/shopdetailssidebarbutton.component.html
+++ b/src/app/shopdetailssidebarbutton/shopdetailssidebarbutton.component.html
@@ -1,3 +1,4 @@
+<input type="number" step="1" min="1" value="1" style="padding-left: 15px; margin-top: 3px;" [(ngModel)]="cartvalue">
 <span>
   <button type="submit" class="btn btn-dark btn-lg " style="font-family: ubuntu, sans-serif; font-size: 15px;" (click)="cartList()">
     <i class="fa fa-shopping-cart" style="color: white;"></i> ADD TO CART
