--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -28,14 +28,14 @@
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px ;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px">
-              CART ({{cartList}})
+              CART ({{carts}})
             </span>
             <span class="caret">
             </span>
           </span>
           <span style="color: #a9a9a9; text-decoration: none;margin-left: 25px;  border-right: 1px solid rgba(85,85,85,1); padding-bottom: 18px; margin-right: 10px; font-family: ubuntu, sans-serif">
             <span style="color: #a9a9a9; text-decoration: none; text-align: center; padding-right: 20px; font-family: ubuntu, sans-serif">
-              Wishlist ({{wishlistData}})
+              Wishlist ({{wishlist}})
             </span>
             <span class="caret">
             </span>
@@ -55,25 +55,6 @@
       <a class="navbar-brand " style="font-family: ubuntu, sans-serif; font-weight: 25">
         UP
         <span style="color:aqua; font-size: 25px">.</span>STORE</a>
-      <!-- <a class="navbar-brand " style="font-family: ubuntu, sans-serif; font-weight: 25; margin-right: 510px"></a>
-      <a class="navbar-brand navs">
-        Home
-      </a>
-      <a class="navbar-brand navs">
-        Pages
-      </a>
-      <a class="navbar-brand navs">
-        Blogs
-      </a>
-      <a class="navbar-brand navs">
-        Portfolio
-      </a>
-      <a class="navbar-brand navs">
-        Shop
-      </a>
-      <a class="navbar-brand navs">
-        Shortcode
-      </a> -->
     </div>
   </div>
 </nav>
