--- a/src/app/shops-details/shops-details.component.html
+++ b/src/app/shops-details/shops-details.component.html
@@ -1,4 +1,4 @@
-<app-header id="top" [message]="carts" [wishlist]="wishlist"></app-header>
+<app-header id="top" [message]="carts" [wishlist]="wishlist" [carts]="carts" [wishlist]="wishlist"></app-header>
 <div class="container containerStyle">
   <div class="row">
     <div class="col-md-2">
@@ -14,7 +14,7 @@
       <app-shopdetailssidebar [ShopIndex]="ShopIndex"></app-shopdetailssidebar>
 
       
-      <app-shopdetailssidebarbutton></app-shopdetailssidebarbutton>
+      <app-shopdetailssidebarbutton (messageEvent)="receiveMessage($event) "></app-shopdetailssidebarbutton>
 
       <!-- <span>
         <button type="submit" class="btn btn-dark btn-lg " style="font-family: ubuntu, sans-serif; font-size: 15px;" (click)="cartList()">
